2009-04-04 [paul]	3.7.1cvs39

	* AUTHORS
	* configure.ac
	* po/id.po
	* src/gtk/authors.h
	* tools/claws.i18n.status.pl
		add new Indonesian translation, by
		MSulchan Darmawan

2009-04-03 [paul]	3.7.1cvs38

	* AUTHORS
	* src/gtk/authors.h
		credit due

2009-04-03 [colin]	3.7.1cvs37

	* src/compose.c
	* src/textview.c
		Fix bug 1891, 'Add support for gopher:// links'
		Patch by Jacob Head <clawsmail at jacob-head.com>
		Let's go back to the roots! 

2009-04-03 [paul]	3.7.1cvs36

	* m4/Makefile.am
		complete cvs35

2009-04-03 [paul]	3.7.1cvs35

	* configure.ac
		add AC_CONFIG_MACRO_DIR([m4])
		remove CLAWS_ACLOCAL_INCLUDE(m4)
	* m4/aclocal-include.m4
		removed this now unneeded file

2009-04-02 [colin]	3.7.1cvs34

	* src/common/utils.h
		Fix previous (thanks to Marcus :)

2009-04-02 [colin]	3.7.1cvs33

	* src/common/utils.h
	* src/etpan/etpan-thread-manager.c
		pipe() was a macro from GLib on win32 until
		glib 2.13.2. It's undefined after that.
		Thanks to Marcus Brinkmann for the heads-up!

2009-03-31 [colin]	3.7.1cvs32

	* src/folder_item_prefs.c
		Copy folder settings with prefs

2009-03-31 [colin]	3.7.1cvs31

	* src/prefs_account.c
		Don't use un-sensitive checkboxes in Privacy tab
		when privacy system in None (makes unchecking 
		painful when no privacy plugin is loaded)

2009-03-30 [colin]	3.7.1cvs30

	* src/folder.c
	* src/folder.h
	* src/imap.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/prefs_account.c
	* src/prefs_account.h
	* src/summaryview.c
	* src/summaryview.h
		Fix bug 1866, 'Claws should make use of the IMAP 'deleted' flag'
		Add an option on the Receive page of IMAP account preferences:
		"Move deleted mails to trash and expunge immediately". This
		option defaults to TRUE to avoid changing the existing behaviour.
		Setting it to FALSE prevents automatic expunging. 
		Also, add Tools/Expunge and View/Hide deleted messages menu items
		(View/Hide deleted message being a per-folder setting, and behaving,
		like View/Hide read messages).
