@@ -1,3 +1,10 @@
+2009-04-05 [colin]	3.7.1cvs40
+
+	* src/procmsg.c
+		Don't ask whether we want to send deleted mails in queue
+		folders; also, don't send deleted mails when flushing
+		queues
+
 2009-04-04 [paul]	3.7.1cvs39
 
 	* AUTHORS
